<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/top_lable"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#39826e"
                android:text="@string/top_lable_pay_detail"
                android:textColor="#ffffff" />

            <LinearLayout
                android:id="@+id/top_menu_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/top_menu_button1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#dbf0e7"
                    android:text="@string/top_menu_point"
                    android:textColor="#427b6c" />

                <Button
                    android:id="@+id/top_menu_button2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#dbf0e7"
                    android:text="@string/top_menu_available_amount"
                    android:textColor="#427b6c" />

                <Button
                    android:id="@+id/top_menu_button3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#dbf0e7"
                    android:text="@string/top_menu_change_pay_amount"
                    android:textColor="#427b6c" />

                <Button
                    android:id="@+id/top_menu_button4"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#dbf0e7"
                    android:text="@string/top_menu_return_to_list"
                    android:textColor="#427b6c" />

            </LinearLayout>
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="41dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/detail_item_shop_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_list_shop_name"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_item_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_list_amount"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_item_pay_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_list_pay_date"
                android:textAllCaps="false"
                android:textColor="#6f6f6f"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/detail_item_pay_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_list_pay_count"
                android:textAllCaps="false"
                android:textColor="#6f6f6f"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bottom_menu_button1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fefefe"
                android:text="@string/bottom_menu_home"
                android:textColor="#8d8d8d" />

            <Button
                android:id="@+id/bottom_menu_button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fefefe"
                android:text="@string/bottom_menu_deal"
                android:textColor="#4e766b" />

            <Button
                android:id="@+id/bottom_menu_button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fefefe"
                android:text="@string/bottom_menu_household"
                android:textColor="#8d8d8d" />

            <Button
                android:id="@+id/bottom_menu_button4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fefefe"
                android:text="@string/bottom_menu_menu"
                android:textColor="#8d8d8d" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>