<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/top_lable"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#39826e"
                android:text="@string/top_lable_card_name"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/top_menu_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/top_menu_button1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#dbf0e7"
                    android:text="@string/top_menu_point"
                    android:textColor="#427b6c"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/top_menu_button2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#dbf0e7"
                    android:text="@string/top_menu_available_amount"
                    android:textColor="#427b6c"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/top_menu_button3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#dbf0e7"
                    android:text="@string/top_menu_change_pay_amount"
                    android:textColor="#427b6c"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/top_menu_button4"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#dbf0e7"
                    android:text="@string/top_menu_check_other_month"
                    android:textColor="#427b6c"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/detail_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bottom_menu_button1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fefefe"
                android:text="@string/bottom_menu_home"
                android:textColor="#8d8d8d"
                android:textSize="12sp" />

            <Button
                android:id="@+id/bottom_menu_button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fefefe"
                android:text="@string/bottom_menu_deal"
                android:textColor="#4e766b"
                android:textSize="12sp" />

            <Button
                android:id="@+id/bottom_menu_button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fefefe"
                android:text="@string/bottom_menu_household"
                android:textColor="#8d8d8d"
                android:textSize="12sp" />

            <Button
                android:id="@+id/bottom_menu_button4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fefefe"
                android:text="@string/bottom_menu_menu"
                android:textColor="#8d8d8d"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>